removed tmux resurrect/continuum

--- a/tmux.conf
+++ b/tmux.conf
@@ -70,8 +70,16 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'jbnicolai/tmux-fpp'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 
 source ~/.tmux/tmuxline/snapshot
+# set -g @continuum-restore 'on'
+
+# # for vim
+# set -g @resurrect-strategy-vim 'session'
+# # for neovim
+# set -g @resurrect-strategy-nvim 'session'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
